<resources>
    <string name="app_name">DAFL Scorekeeper</string>
    <string name="button_new_game">New Game</string>
    <string name="button_previous_games">Previous Games</string>
    <string name="menu_home">Start</string>
    <string name="menu_preferences">Preferences</string>
    <string name="tool_placeholder">Placeholder</string>
    <string name="button_select_home_team">Select Home Team</string>
    <string name="button_select_away_team">Select Away Team</string>
    <string name="placeholder_round_number">Round number</string>
    <string name="text_view_round">Round:</string>
    <string name="text_view_new_match">New Match</string>
    <string name="placeholder_year">YYYY</string>
    <string name="placeholder_month">MM</string>
    <string name="placeholder_day">DD</string>
    <string name="text_view_date">Date:</string>
    <string name="button_submit_game"><![CDATA[Set Teams >]]></string>
    <string name="placeholder_round_xx">R: XX</string>
    <string name="placeholder_xx_v_yy">xxxx xxx v yyyy yyy</string>
    <string name="text_view_set_up">Set up:</string>
    <string name="placeholder_team_xxx">XXXX XXX</string>
    <string name="button_submit_team">Submit Team</string>
    <string name="text_view_score_nil">000</string>
    <string name="text_view_goals_behinds_nil">00</string>
    <string name="text_view_total_label">Total</string>
    <string name="text_view_q4_label">Q4</string>
    <string name="text_view_q3_label">Q3</string>
    <string name="text_view_q2_label">Q2</string>
    <string name="text_view_q1_label">Q1</string>
    <string name="button_goal_capitals">GOAL</string>
    <string name="button_behind_capitals">BEHIND</string>
    <string name="placeholder_xx_by_yyy_points">XX by XXX points</string>
</resources>