<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/fragment_setup_team_round"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_round_xx"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragment_setup_team_teams"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_xx_v_yy"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/fragment_setup_team_round"
        app:layout_constraintBaseline_toBaselineOf="@id/fragment_setup_team_round" />

    <TextView
        android:id="@+id/fragment_setup_team_current_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_set_up"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_setup_team_round" />

    <TextView
        android:id="@+id/fragment_setup_team_current_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_team_xxx"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@id/fragment_setup_team_current_label"
        app:layout_constraintBaseline_toBaselineOf="@id/fragment_setup_team_current_label" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_setup_team_players"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/fragment_setup_team_current_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_setup_team_submit_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_submit_team"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>