<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fragment_start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fragment_start_guideline" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_start_button_new_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_new_game"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_start_guideline"
        app:layout_constraintEnd_toStartOf="@id/fragment_start_button_previous_games" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_start_button_previous_games"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_previous_games"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_start_guideline"
        app:layout_constraintStart_toEndOf="@id/fragment_start_button_new_game" />

</androidx.constraintlayout.widget.ConstraintLayout>